--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -96,7 +96,7 @@ using IR-based source transformation instead of operator overloading.  Inspired 
 differentiable programming \parencite{innes2018don}, the approach transforms the intermediate
 representation used by the compiler of the Julia programming language.  This system can be used to
 dynamically track computation graphs of any Julia program, including machine learning models and
-probabilistic programming systems, without having to explicitly declare graph structures.
+probabilistic programming systems, without having to explicitly declare graph structures.\todo{parskip}
 
 The transformation is implemented as a custom part of the compilation process.  Its result is passed
 back to the compiler, where it can be optimized further. At run time, both data and control path are
