--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -147,7 +147,7 @@ least upper bound of all the PPL modeling approaches:
   observations in \turingjl{} parlance, which relate names or values to distributions (or generally
   sub-models) in an declarative way.
 \item First-class variable names: these may be quite complex, containing for example indexing,
-  fields, link functions, etc., which can be identified and analyzed in a structured way.
+  fields, link functions, etc., which can be identified and analysed in a structured way.
 \end{itemize}
 Given this, it seems feasible to define arbitrary probabilistic programs an IR-like syntax, similar
 to an extended SSA-form; the crucial point being that names and tildes are not separated from a host
