--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -17,7 +17,7 @@
 
   The second part of the thesis describes the application of this graph tracking system to
   probabilistic programs written for \turingjl, a probabilistic programming system implemented as an
-  embedded language within Julia.  Through this, an executed Turing model can be analyzed, and the
+  embedded language within Julia.  Through this, an executed Turing model can be analysed, and the
   dependency structure of involved random variables be extracted from it.  Given this structure,
   analytical Gibbs conditionals can be calculated for a large set of models and passed to Turing's
   inference mechanism, where they are used in Markov-Chain Monte Carlo samplers approximating the
