--- a/thesis/automatic_graph_tracking.tex
+++ b/thesis/automatic_graph_tracking.tex
@@ -3,28 +3,29 @@
 
 As described previously, there is a trade-off between source-transformation methods and
 library-based (operator overloading) approaches for tracking computation graphs.  Since the ultimate
-goal of this work is to analyze dynamic probabilistic models written in \turingjl{}, properties of
-both are desireable.  An operator overloading approach has been considered, since it would have
-allowed to potentially reuse AD implementations, but was thought insufficient, because the structure
-of control flow and recursion are lost.  Inspired by the work of \textcite{innes2018don}, it seemed
-most promising to start from a source-transformation based approach implemented over the IR,
-especially from a usability point of view.  The advantages of using a transformation of the IR over
-the surface AST are the same: there is less overhead from handling multiple syntactic forms, and
-naming is already referentially transparent.  Additionally, there are existing Julia packages to
-simplify handling the IR data structures and set up the transformations.
+goal of this work is to analyse dynamic probabilistic models written in \turingjl{}, properties of
+both are desirable.  An operator overloading approach has been considered for this purpose, since
+it would have allowed to potentially reuse AD implementations, but was thought insufficient, because
+the structure of control flow and recursion are lost.  Inspired by the work of
+\textcite{innes2018don}, it seemed most promising to start from a source-transformation based
+approach implemented over the IR, especially from a usability point of view.  The advantages of
+using a transformation of the IR over the surface AST are the same: there is less overhead from
+handling multiple syntactic forms, and naming is already normalized into a convenient format.
+Additionally, there are existing Julia packages to simplify handling the IR data structures and set
+up the transformations.
 
 However, the dynamicity of the trace structure of general probabilistic programs needs to be
 preserved and exposed to the user, for each function evaluation~-- which is different from the AD
-usage, where the adjoint function is already the ultimate goal, and does not change with the
-arguments.  Hence, a method for a hybrid version was developed: through an IR transformation, the
-original code of a function to be tracked should be extended by additional statements to record a
-trace of the executed statements and control flow operations at run-time.  The algorithm and
-structures on which this approach is based have already been shortly described in
-\textcite{gabler2019graph}, and will be explained more extensively below.  An open source
-implementation is available
+usage, where the adjoint function is already the ultimate goal, and is assumed not to have a
+computation graph changing with the arguments.  Hence, a method for a hybrid version was developed:
+through an IR transformation, the original code of a function to be tracked should be extended by
+additional statements to record a trace of the executed statements and control flow operations at
+run-time.  The algorithm and structures on which this approach is based have already been shortly
+described in \textcite{gabler2019graph}, and will be explained more extensively below.  An open
+source implementation is available
 online\footnote{\protect\url{https://github.com/TuringLang/IRTracker.jl}}.
 
-As we have seen above, in section~\ref{sec:comp-metapr-julia}, generated functions allow the
+As we have seen above in section~\ref{sec:comp-metapr-julia}, generated functions allow the
 inspection and transformation of the IR of given functions.  This technique can be applied to
 recursively traverse the implementation of a given function, annotating each operation with
 necessary tracking statements, and changing the inputs and outputs accordingly to extract this
@@ -33,39 +34,40 @@ the tracking system:\todo{page break}
 \begin{enumerate}
   \firmlist
 \item Storage of all intermediate values during execution.
-\item Symbolic capture of intermediate expressions and branches in an analyzable, graphical form.
+\item Symbolic capture of intermediate expressions and branches in an analysable, graphical form.
 \item Preservation of the relation of each part of the structure to the corresponding original IR.
 \item Proper nesting of this information for nested function calls, making relations between
   arguments and function inputs recoverable.
 \item Correct handling of constants and primitive functions in the IR.
-\item Extensibility of the tracking functions, to allow multiple possible ways to analyze code
+\item Extensibility of the tracking functions, to allow multiple possible ways to analyse code
   (e.g., by different definitions of what should be recorded).
 \item A way to add custom metadata to the recorded structure during tracking.
 \end{enumerate}
 This kind of operation will be similar to the (explicit) construction of Wengert lists in
-backwards-mode AD (see section~\ref{sec:cg-ad}); but contrary to there, the nested call structure
-and control flow shall be preserved as well.  Hence, we call this structure \emph{extended Wengert
-  list}.  
+backwards-mode AD (see section~\ref{sec:cg-ad}); but contrary to the AD case, the nested call
+structure and control flow shall be preserved as well.  Hence, we call this structure \emph{extended
+  Wengert list}.
 
 \section{Extended Wengert Lists}
 \label{sec:exteded-wengert-lists}
 
 The extended Wengert list structure is implemented in Julia through nested objects of an abstract
 supertype \jlinl{AbstractNode}, with several concrete subtypes for the different kinds of nodes.
-Additionally, there are special types for the tape- and block references, and an expression type
-\jlinl{TapeExpression}, mimicking the built-in \jlinl{Expr}, but adding more semantic distinctions
-(such as between references and constants, and between primitive and non-primitive function calls).
-On top of this, an API to query the graph structure is provided, allowing, for example, to find all
-children or parents of a tape reference up to a certain depth, or extract data from nodes, such as
-referenced variables, arguments, or metadata.
+Additionally, there are special types for the tape- and block references (corresponding to SSA
+variables and blocks), and an expression type \jlinl{TapeExpression}, mimicking the built-in
+\jlinl{Expr}, but adding more semantic distinctions (such as between references and constants, and
+between primitive and non-primitive function calls).  On top of this, an API to query the graph
+structure is provided, allowing, for example, to find all children or parents of a tape reference up
+to a certain depth, or extract data from nodes, such as referenced variables, arguments, or
+metadata.
 
 \begin{figure}[t]
   \centering
   \includegraphics[width=\textwidth]{figures/extended-wengert-list}
-  \caption{Extended Wengert list for one run of the stochastic function geom (only three levels
-    shown). The central box is the tracked graph of the call \protect\jlinl{geom(1, 0.6)}. The other
-    boxes show the original IR of the called non-primitive functions, to which the nodes are
-    linked.  Angle brackets indicate constant values.}
+  \caption{Extended Wengert list for one run of the stochastic function \protect\jlinl{geom} (only
+    three levels shown). The central box is the tracked graph of the call \protect\jlinl{geom(1,
+      0.6)}. The other boxes show the original IR of the called non-primitive functions, to which
+    the nodes are linked.  Angle brackets indicate constant values.}
   \label{fig:ext-wengert-list}
 \end{figure}
 
@@ -76,8 +78,9 @@ geom(n, beta) = rand() < beta ? n : geom(n + 1, beta)
 \end{lstlisting}
 (for readability, the result is displayed to only three levels of nesting).  The function draws a
 sample from the geometric distribution with parameter \jlinl{beta}, starting to count at value
-\jlinl{n}. On the left, we have its IR in textual form, consisting of two blocks. The central part
-is the graph of nested nodes.  There, values and jumps from the top-level call are recorded in their
+\jlinl{n} (simulating, for example, throws of a biased coin until heads are observed).  On the left,
+we have the function's original IR in textual form, consisting of two blocks. The central part is
+the graph of nested nodes.  There, values and jumps from the top-level call are recorded in their
 encountered order, as nodes with \enquote{tape references} \jlinl{@1} to \jlinl{@9}. SSA variables
 (\jlinl{\%i}) occurring in expressions of SSA definitions are also replaced in the nodes by the
 respective tape references.  Each node is linked to the original IR statement it records, as
@@ -88,13 +91,13 @@ In the lower middle part, we see the node corresponding to the statement \jlinl{
 \jlinl{4} (the notation \jlinl{⟨geom⟩} indicates that \jlinl{geom} is a constant, and \jlinl{()...}
 stands for the absence of optional arguments). The values of the arguments of this call can be
 inspected by looking up the respective references.  Since \jlinl{geom} is not a primitive function,
-the node holds tape of child nodes as well.  In this case, it is equivalent to the top level, due to
-the recursivity of \jlinl{geom}. We can see the three arguments \jlinl{@1}, \jlinl{@2}, and
-\jlinl{@3}, corresponding to the block arguments \jlinl{\%1}, \jlinl{\%2}, and \jlinl{\%3}, with the
-value of \jlinl{@2} being now \jlinl{2} instead of \jlinl{1}.  Further we can see function calls of
-\jlinl{rand} and \jlinl{<} as well as a conditional jump, corresponding to the branch the original
-IR, followed by calls of \jlinl{+} and \jlinl{geom}. Following back the tape references from the
-result value \jlinl{@9}, the data path of the trace can be extracted.  It can be used for
+the node holds a list of child nodes as well.  In this case, it resembles the top level, due to the
+recursivity of \jlinl{geom}. We can see the three arguments \jlinl{@1}, \jlinl{@2}, and \jlinl{@3},
+corresponding to the block arguments \jlinl{\%1}, \jlinl{\%2}, and \jlinl{\%3}, with the value of
+\jlinl{@2} being now \jlinl{2} instead of \jlinl{1}.  Furthermore we can see function calls of
+\jlinl{rand} and \jlinl{<} as well as a conditional jump, corresponding to the branch in the
+original IR, followed by calls of \jlinl{+} and \jlinl{geom}.  Following back the tape references
+from the result value \jlinl{@9}, the data path of the trace can be extracted.  It can be used for
 reverse-mode AD, and only these nodes would be recorded in a conventional Wengert list.  In this
 work, however, the system also records the nodes on the control path, consisting of \jlinl{@6} and
 the nodes it depends on.
@@ -112,25 +115,25 @@ that non-primitive functions are recursively tracked.
 The recording functionality is implemented as a transformation using a generated function operating
 on the IR, using the \juliapackage{IRTools.jl} package, as described in
 section~\ref{sec:comp-metapr-julia}.  The resulting IR consists of about three to five times as many
-statements as the original. This is a small constant overhead per statement, but should not affect
-complexity using proper implementation techniques, such as a good choice of collection structures
-and paying attention to type stability.  The basic blocks and control structure are preserved,
-except for the redirection of return statements to the one block at the end.  Due to JIT
-compilation, the transformation is performed at most a constant number of times per method, and then
-stored as compiled code.  However, the tracking~-- the recording of all statements in the extended
-Wengert list structure~-- happens at every execution during run-time, which is an important feature
-to allow the application to dynamic models..  Furthermore, the extended code is available to all
-standard optimizations performed in the following passes of type inference and lowering.
+statements as the original.  This is a small constant overhead per statement, but should not affect
+complexity when done properly, such as with a good choice of collection structures and paying
+attention to type stability.  In the transformed code, the basic blocks and control structure are
+preserved, except for the redirection of return statements to one extra block at the end.  Due to
+JIT compilation, the transformation is performed at most a constant number of times per method, and
+then stored as compiled code.  However, the tracking~-- the recording of all statements in the
+extended Wengert list structure~-- happens at every execution during run-time, which is an important
+feature to allow the application to dynamic models..  Furthermore, the extended code is available to
+all standard optimizations performed in the following compiler passes.
 
 The transformed code of the example function \jlinl{geom}, whose untracked IR is given in
-figure~\ref{fig:ext-wengert-list} above at the sides, is displayed in figure~\ref{fig:geom-tracked}.
+figure~\ref{fig:ext-wengert-list} above at the left, is displayed in figure~\ref{fig:geom-tracked}.
 First, a \enquote{graph recorder} object is passed into the function via the extra argument
 \jlinl{\%5}.  In this, the original IR is stored for later access.  Subsequently, every original SSA
 statement is replaced by a call to one of the \protect\jlinl{trackedX} functions, to which both the
-function and its arguments, wrapped into \jlinl{TapeExpression}s directly (for constants) or
-indirectly (through \jlinl{trackedvariable} and \jlinl{trackedargument}, which preserve the symbolic
-mapping to SSA variables).  The \jlinl{record!}  function takes care of constructing the child node
-of the possibly nested call, and storing them on the recorder object.
+function and its arguments are passed.  The latter are wrapped into \jlinl{TapeExpression}s directly
+(for constants) or indirectly (through \jlinl{trackedvariable} and \jlinl{trackedargument}, which
+preserve the symbolic mapping to SSA variables).  The \jlinl{record!}  function takes care of
+constructing the child nodes of the possibly nested call, and storing them on the recorder object.
 
 \begin{figure}[p]
   % \hrule
@@ -150,24 +153,25 @@ transformed into \jlinl{\%33} to \jlinl{\%37} on the left).
 \begin{enumerate}
   \firmlist
 \item First, a constant node \jlinl{\%33} for the function is set up.
-\item Then, the variable argument in is tracked in \jlinl{\%34}.  There, \jlinl{trackedvariable} has
-  the purpose to correctly relate the node in the trace (\jlinl{@2}) to the original SSA variable
-  \jlinl{\%6}.  This is necessary since a block could be visited multiple times during tracking~--
-  for example, if it belongs to a loop body~-- which requires to give multiple, unique names to
-  references to the same original variable.  Additionally, \jlinl{trackedvariable} copies values,
-  since the tracked information would otherwise no preserve intermediate values correctly in the
-  case of mutations.
+\item Then, the SSA variable argument \jlinl{\%2} is tracked in \jlinl{\%34}.  There,
+  \jlinl{trackedvariable} has the purpose to correctly relate the node in the trace (\jlinl{@2}) to
+  the original variable.  This is necessary, since a block could be visited multiple times during
+  tracking~-- for example, if it belongs to a loop body~-- which requires to give multiple, unique
+  names to references to the same original variable.  Additionally, \jlinl{trackedvariable} copies
+  mutable values, since the tracked information would otherwise not preserve intermediate values
+  correctly in the case of mutations.
 \item Next, both of the function arguments are packed into the tuple \jlinl{\%35}; the second
   argument, which was a literal value \jlinl{1} in the original IR, is preserved as a literal as
   well (wrapped into a \jlinl{QuoteNode} object for technical reasons).
 \item Finally, the function and arguments are passed to the function \jlinl{trackedcall}, which
-  takes care of actually calling the original function.  Doing so, it will, if the called function is
-  not considered primitive, recursively track it as well, and pack the resulting child nodes into a
-  new nested node, together with the return value.  Otherwise, the result will simply be stored in a
-  special primitive-call node.
+  takes care of actually calling the original function.  Doing so, it will, if the called function
+  is not considered primitive, recursively track its children, and pack the resulting child nodes
+  into a new nested node, together with the return value.  Otherwise, the result will simply be
+  stored in a special primitive-call node.
 \item The resulting node is then stored on the recorder; this operation at the same time returns the
-  value, \jlinl{\%37}, which is needed in subsequent calculations (in this case, in \jlinl{\%39}, as
-  the argument of the recursive call to \jlinl{geom}).
+  return value, \jlinl{\%37}, replacing the original \jlinl{\%6}, which is needed in subsequent
+  calculations (in this case, in \jlinl{\%39}, as the argument of the recursive call to
+  \jlinl{geom}).
 \end{enumerate}
 Branches, tracked with \jlinl{trackejump} and \jlinl{trackedreturn}, cannot be stored on the
 recorder object before the respective jumps are taken.  The solution is to first construct the
@@ -175,13 +179,13 @@ respective nodes of all possible branches of a block (\jlinl{\%28}), and adding 
 argument to the old branches.  Then, in each target branch, the jump node from which the branch
 originated is recorded immediately (in this case, in statement \jlinl{\%32}).  As a special case,
 all return branches are converted to unconditional jumps to one new block at the end, which contains
-a single unified return branch.  (For illustration, \jlinl{\%28} and \jlinl{\%30}, the branch
-variables of block 1, are highlighted in colors matching to the original branches in
-figure~\ref{fig:geom-tracked}.)  This way, return branches can be treated in the same way as internal
-branches.  An more formal description in pseudo-code is given in algorithm~\ref{alg:ir-transform}.
+a single unified return branch.  (For illustration, in figure~\ref{fig:geom-tracked}, \jlinl{\%28}
+and \jlinl{\%30}, the branch variables of block \jlinl{1}, are highlighted in colors matching the
+original branches.)  This way, return branches can be treated in the same way as internal branches.
+A more formal description in pseudo-code is given in algorithm~\ref{alg:ir-transform}.
 
 Lastly, some special dispatch is used for the transformation to work correctly on certain special
-kinds of function calls, such as built-in functions, type application, and \texttt{ccall}
+kinds of function calls, such as intrinsic functions, type application, and \texttt{ccall}
 primitives, which require more careful handling.  These functions are detected and replaced by
 \jlinl{trackedspecial} tracking statements appropriately.
 
@@ -260,10 +264,10 @@ primitives, which require more careful handling.  These functions are detected a
 
 To provide some modularity and extensibility to the system, it also affords customization of some
 behavior by \emph{tracing contexts}.  All of the \jlinl{trackedX} functions explained above, used
-directly in the transformed code, are really special methods that work directly on the recorder
+directly in the transformed code, are really internal methods that work directly on the recorder
 object.  Their behavior~-- namely, performing the actual method calls and constructing the nodes~--
 is defined in another method of the same function, which dispatches on a context object stored in
-the recorder object, and can be overloaded by the user for a custom context.  
+the recorder object, and can be overloaded by the user for a custom context.
 
 \begin{lstfloat}
 \begin{lstlisting}[style=lstfloat]
@@ -281,20 +285,20 @@ function trackednested(ctx::DepthLimitContext, f_repr::TapeValue,
     return recordnestedcall(new_ctx, f_repr, args_repr, info)
 end
 \end{lstlisting}
-  \caption{Implementation of a tracking context to limit the nesting depth to a maximum (which is
-    part of the implemented package).\label{lst:depthlimitcontext}}
+  \caption{Implementation of a tracking context to limit the nesting depth to a maximum (provided as
+    part of \irtrackerjl{}).\label{lst:depthlimitcontext}}
 \end{lstfloat}
 
 This allows, for one, to overload the notion of what constitutes a \emph{primitive function}.  In
 the default context, primitive functions are only those that do not have IR on their own (such as
-intrinsics and functions defined in C), which leads to very large recursive traces.  To circumvent
-this, we can introduce a new \jlinl{DepthLimitContext}, as shown in
+intrinsics and functions defined in C), which leads to extremely large recursive traces even for
+simple functions.  To prevent this, we can introduce a new \jlinl{DepthLimitContext}, as shown in
 listing~\ref{lst:depthlimitcontext}.  There, the function \jlinl{canrecur} is overloaded to stop at
 depth \jlinl{maxlevel}; this method will be called to determine whether a tracked function is
 considered primitive.  Besides this, we also have to redefine the behavior of \jlinl{trackednested}
 to specify that for non-primitive functions, i.e., nested calls, the level remembered in the context
-object should be updated.  \jlinl{recordnestedcall} is a built-in function of the library that
-simply performs the recursive tracking, then.
+object should be incremented.  \jlinl{recordnestedcall} is a built-in function of the library that
+performs the actual recursive tracking.
 
 From this we see that \jlinl{trackedcall} is only a thin wrapper around a conditional statement over
 \jlinl{canrecur}, \jlinl{trackednested}, and its sibling \jlinl{trackedprimitive}.  Beyond this,
@@ -312,7 +316,7 @@ repository.
 
 The extended Wengert list created by tracking a function can be used for many purposes in which
 computation graphs are required.  All algorithms that can be formulated as message-passing can
-directly work on this, as well as all methods that operate on run-time dependency graphs, from
+directly work on this, as well as all methods that operate on run-time dependency graph slices, from
 simple debugging to concolic execution (see discussion below).
 
 As a proof of concept, a small backward-mode AD system was implemented in the form of a context.
@@ -321,15 +325,15 @@ pass, and writing a backward pass as graph traversal on the resulting computatio
 graph.\footnote{\href{https://github.com/TuringLang/IRTracker.jl/blob/760143734de1bf4e90da655d833e7999fc0ab2de/test/test_backward_ad.jl}{\url{https://github.com/TuringLang/IRTracker.jl/blob/master/test/test_backward_ad.jl}}}
 The implementation has been tested on some simple composed functions, but is not intended for
 serious application.  Due to the very abstract nature of the implementation, not more individual
-evaluations of it are performed, except unit tests to ensure basic correctness of the interface.
-The approach discussed in chapter~\ref{cha:graph-track-prob} illustrates a more realistic use-case
-of the proposed system, and serves thus a larger integration test.
+evaluations of it are performed, except unit tests to ensure correctness of the interface.  The
+approach discussed in chapter~\ref{cha:graph-track-prob} illustrates a more realistic use-case of
+the proposed system, and serves thus a larger integration test.
 
 More potential use cases arise when the tracked model is actually static~-- in this case, the
-complete structure can be recovered from one graph tracking pass.  This graph can then be analyzed
-and used in various ways; even more so, when more semantic knowledge about the model program exists,
-such as meanings of certain domain-specific functions.  Examples of this are conjugacy detection as
-described by \textcite{hoffman2018autoconj}, and automatic Rao-Blackwellization as in
+complete structure can be recovered from one graph tracking pass.  This graph can then be analysed
+and used in various ways; even more so, when additional semantic knowledge about the model program
+exists, such as meanings of certain domain-specific functions.  Examples of this are conjugacy
+detection as described by \textcite{hoffman2018autoconj}, and automatic Rao-Blackwellization as in
 \textcite{murray2017delayed}.
 
 % Specifically, two show-cases for the system, applied to probabilistic programs written in
@@ -337,37 +341,37 @@ described by \textcite{hoffman2018autoconj}, and automatic Rao-Blackwellization 
 % automatic derivation of Gibbs conditionals, as shown in the next chapter, was finally executed,
 % though.
 
-The implementation is limited in two respects.  First, in practical terms, there are some trade-offs
-to be made regarding the storage of intermediate results and functions in nodes.  In the current
-design, nodes are parameterized by the types of their contents, which leads to very large types, and
-potential slow-down during type inference.  Not doing this would prevent type stability of the
-transformed code, since all of the intermediate values that are passed directly in the original code
-are wrapped in node structures and unwrapped again.  There are even still some cases in which the
-parametrization does not eliminate type instability.  Alternatively, original values could be passed
-unwrapped into the \jlinl{trackedcall} functions, besides the node arguments; this would lead to
-more complicated handling of values, though.
+\newthought{The implementation is limited} in two respects.  First, in practical terms, there are
+some trade-offs to be made regarding the storage of intermediate results and functions in nodes.  In
+the current design, nodes are parameterized by the types of their contents, which leads to very
+large types, and potential slow-down during type inference.  Not doing this would prevent type
+stability of the transformed code, since all of the intermediate values that are passed directly in
+the original code are wrapped in node structures and unwrapped again.  There are even still some
+cases in which the parametrization does not eliminate type instability.  Alternatively, original
+values could be passed unwrapped into the \jlinl{trackedcall} functions, besides the node arguments;
+this would lead to more complicated handling of values, though.
 
 The other, more fundamental restriction is inherent to dynamic tracing: alternative paths, that were
 not taken due to run-time control flow, are not recorded.  Compared to a traditional operator
 overloading system, \irtrackerjl{} does preserve the information about which branches were taken,
 and for which reason in the case of conditional branches, but this is not enough for complete static
-analysis in all cases.
+analysis in general.
 
 One possible direction for extension is concolic execution \parencite{zeller2019concolic}, in which
 the function is traced multiple times with different arguments, whose exact values are determined by
-constraint solving so that all possible execution paths are covered.  This is potentially slow, and
-goes against the spirit of the idea of tracking once, in parallel to the normal forward execution.
+constraint solving, so that all possible execution paths are covered.  This is potentially slow, and
+goes against the spirit of the idea of tracking once, in lockstep with normal forward execution.
 Also, it is not applicable to general user-defined types, but constrained to whatever theories the
 used SMT solver supports.  Alternatively, a method to merge control paths in the transformed
 function could be conceived.  This might, however, suffer from exponential blow-up in several cases,
 is difficult to get right in the presence of mutation, and has complicated theoretical properties
-(e.g., termination of the resulting code might be undecidable).
+(e.g., one might not be able to guarantee termination of the tracing code).
 
-As another future direction, it is conceivable that a composable context system could be designed,
-such that, for example, one could perform automatic differentiation and dependency graph tracking
-within one tracking pass.  However, this would require more careful design, since it is unclear how
-to deal with potential non-commutativity or non-associativity of the effects of contexts in
-different orders (e.g., which one gains priority in the decision about nested or primitive
+As a different future direction, it is conceivable that a composable context system could be
+designed, such that, for example, one could perform automatic differentiation and dependency graph
+tracking within one tracking pass.  However, this would require more careful design, since it is
+unclear how to deal with potential non-commutativity or non-associativity of the effects of contexts
+in different orders (e.g., which one gains priority in the decision about nested or primitive
 tracking).
 
 
